testsuite/tests/typecheck/should_fail/T2846b.stderr

T2846b.hs:5:5: error:
    No instance for (Show (forall a. [Num a => a]))
      arising from a use of ‘show’
    In the expression: show ([1, 2, 3] :: [Num a => a])
    In an equation for ‘f’: f = show ([1, 2, 3] :: [Num a => a])
